k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-web
  labels:
    name: external-web
    app: prismscope-website
