k8s/cloudrun-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prismscope-cloudrun-proxy
  namespace: external-web
  labels:
    app: prismscope-website
    tier: cloudrun-proxy
spec:
  type: ExternalName
  externalName: prismscope-website-441834635077.us-central1.run.app
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
